RHD-514 Fixed collapse point of side navigation

--- a/stylesheets/_mobile.scss
+++ b/stylesheets/_mobile.scss
@@ -174,7 +174,7 @@
 }
 
 // 3rd level nav on solutions pages
-@include tablet-landscape-and-down {
+@include tablet-portrait-and-down {
 
   .side-nav {
     li {
